# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.89 $ $Date: 2008-10-23 20:56:24 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-10-23  Christian Heller  <christian.heller@tuxtax.de>
        * Debug source code to the point where the "initialiser.c" calls the
            function "communicate_receiving_file_system" in file "file_system_receiving_communicator.c"

2008-10-13  Christian Heller  <christian.heller@tuxtax.de>
        * Start adapting website to using modern CSS layout

2008-10-05  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors
        * Clean up linking errors

2008-10-02  Christian Heller  <christian.heller@tuxtax.de>
        * Finish implementing XML parser in file "xml_converter.c"
        * Replace "libxml2" parser with this own solution
        * Add file "xml_cybol_name.c"

2008-09-25  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-22  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-21  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-20  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-19  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing CYBOL parser in file "cybol_converter.c"
        * Add file "model_allocator.c"; a "model" is a memory structure together